1.11.2 - Simple API - Fixed text going off screen

--- a/src/components/simplyApiFetch/view/view.css
+++ b/src/components/simplyApiFetch/view/view.css
@@ -51,3 +51,10 @@
 
 
 #white-space-pre-wrap{white-space:pre-wrap}
+.white-space-pre-wrap{white-space:pre-wrap}
+
+@media screen and (max-width:768px) {
+    .simpleApiFetch__userAccountInfo{
+        flex-wrap: wrap;
+    }
+}
